--- a/index/static/css/styles.css
+++ b/index/static/css/styles.css
@@ -11171,9 +11171,9 @@ header.masthead .masthead-heading {
   margin-left: 0;
   text-align: center;
   color: white;
-  border: 7px solid #e9ecef;
+  border: 7px solid #207cca;
   border-radius: 100%;
-  background-color: #ffc800;
+  background-color: #0D1526;
 }
 .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
   font-size: 10px;
