--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Skills</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Puedo trabajar muy bien con:</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -68,7 +68,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Puedo encargarme de todo lo relacionado con el diseño, desarrollo y gestion de cualquier tipo de plataforma tipo E-Commerce, entre otros tantos usando HTML, CSS y Python.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -76,15 +76,15 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Diseños totalmente responsivos a la hora del desarrollo de cualquier proyecto, usando por ejemplo, Bootstrap.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-database fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Data Scientist</h4>
+                        <p class="text-muted">Recientemente volcado a la ciencia de datos, me puedo desembolver muy bien analizando y gestionando grandes volumenes de datos a través de SQL para su posterior manipulación con pandas o numpy.</p>
                     </div>
                 </div>
             </div>
@@ -319,7 +319,7 @@
         <section class="page-section" id="contacto">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contactáme!</h2>
+                    <h2 class="section-heading text-uppercase">Escribime!</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
