insercion redes y mejora portfolio 1

--- a/index/static/css/styles.css
+++ b/index/static/css/styles.css
@@ -600,7 +600,8 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  width: 100%;
 }
 
 .img-thumbnail {
@@ -8108,7 +8109,7 @@ textarea.form-control-lg {
 
 .text-dark {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
+  color: #207cca;
 }
 
 .text-black {
@@ -10875,7 +10876,7 @@ p {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: 3rem 0;
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
@@ -11162,6 +11163,8 @@ header.masthead .masthead-heading {
   border-right-width: 14px;
   border-left-width: 0;
 }
+
+
 .timeline > li .timeline-image {
   position: absolute;
   z-index: 100;
@@ -11289,8 +11292,10 @@ header.masthead .masthead-heading {
 }
 .team-member img {
   width: 14rem;
-  height: 14rem;
-  border: 0.5rem solid rgba(0, 0, 0, 0.1);
+  height: 15rem;
+  border: 0.5rem double #1E293B;
+  background: #066173;
+  border-radius: 20%;
 }
 .team-member h4, .team-member .h4 {
   margin-top: 1.5rem;
@@ -11331,7 +11336,7 @@ section#contact form#contactForm p.help-block {
   margin: 0;
 }
 section#contact form#contactForm .form-control:focus {
-  border-color: #ffc800;
+  border-color: #207cca;
   box-shadow: none;
 }
 section#contact form#contactForm ::-webkit-input-placeholder {
