--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -41,15 +41,15 @@
         <header class="masthead" id="inicio">
             <div class="container">                
                 <!-- Header text content-->
-                <div class="container-image-principal">
+                <div class="container-image-principal mb-5 pb-5">
 
                 </div>
-                <div class="text-center text-xxl-start">
+                <div class="text-center text-xxl-start mt-5 pt-5">
                     <div class="badge mb-4"><div class="text-uppercase text-dark">Desarrollador &middot; Programador</div><hr></div>                               
-                    <h1 class="display-4 fw-bolder mb-5"><span class="masthead-heading d-inline text-white">Python & Web developer</span></h1>
+                    <h1 class="display-4 fw-bolder mb-5"><span class="masthead-heading d-inline text-white maq-escribir">Python & Web developer</span></h1>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-5 mt-5">
                         <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Descargar CV</a>
-                        <a class="btn btn-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Proyectos</a>
+                        <a class="btn btn-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Github</a>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Mis ultimos trabajos</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
